--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
-language: c
-compiler: gcc
-script: make
+language: python
+python:
+  - "3.6"      # current default Python on Travis CI
+# command to install dependencies
+install:
+  - pip install -r requirements.txt
+# command to run tests
+script:
+  - pytest tests.py
